# quick-spin-ai

./: .env.example  .gitignore  .gitlab-ci-helm.yml  .gitlab-ci.yml  ARCHITECTURE.md  CICD_SETUP.md  CONTRIBUTING.md  Dockerfile  Makefile  QUICK_START.md  README.md  docker-compose.yml  pyproject.toml  setup.sh
app/: __init__.py  cli.py  main.py
app/core/: config.py  dependencies.py  security.py
app/models/: conversation.py  recommendation.py  service.py
app/repositories/: conversation_repo.py  knowledge_repo.py
app/routers/: chat.py  health.py  recommendations.py
app/services/: ai_engine.py  kubernetes_client.py  quickspin_client.py  vector_store.py
app/workflows/: diagnose.py  optimize.py  provision.py
helm/: Chart.yaml  values.yaml
helm/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pdb.yaml  pvc.yaml  service.yaml
k8s/: README.md  certificate.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  pvc.yaml  secrets.yaml.example  service.yaml
tests/: __init__.py  conftest.py  test_health.py
